Changes for Java 25